# ofxstatement-fineco

./: .gitignore  MANIFEST.in  Makefile  Pipfile  README.rst  pyproject.toml  setup.py
.github/workflows/: test.yml
src/ofxstatement/plugins/: fineco.py  sample.py
src/ofxstatement_fineco/: plugin.py
src/ofxstatement_fineco/config/: defaults.ini
tests/: movements.xlsx  my-cards.xls  test_sample.py
