[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ofxstatement-fineco"
version = "0.1.2"
authors = [
  { name="Francesco Lorenzetti" },
]
description = "italian bank Fineco, it parses both xls files available for private accounts"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["ofx", "banking", "statement", "plugin", "ofxstatement", "fineco"]
dependencies = [
  "ofxstatement",
  "xlrd<=1.2.0"
]

[project.urls]
Homepage = "https://github.com/frankIT/ofxstatement-fineco"

[project.entry-points."ofxstatement"]
fineco = "ofxstatement_fineco.plugin:FinecoPlugin"
